# autonomous-x-surveillance

./: CMakeLists.txt  README.md
device/: CMakeLists.txt  bootstrap.sh  common.c  common.h  config.json.5glab  config.json.5glab.test  config.json.hw_cloud  config.json.lab  config.json.test  global.h  gst_webrtc.c  gst_webrtc.h  msg_handlers.c  webrtc-gstreamer-sender  webrtc-gstreamer-sender.c
device/other/: msg_handlers.h
gst-webrtc-lib/: CMakeLists.txt  gst_webrtc.c  gst_webrtc.h  msg_handlers.c  msg_handlers.h  utils.c  utils.h
gst_rtsp_lib/: CMakeLists.txt  Makefile  gst_rtsp.c  gst_rtsp.h
gst_webrtc_lib/: CMakeLists.txt  common.c  common.h  defs.h  gst_webrtc.c  gst_webrtc.h  msg_handlers.c
line_gauge/: line_gauge.html  line_gauge_config.json  line_gauge_data.js  line_gauge_history.html  说明文档.docx
line_gauge/common/css/: bootstrap-datetimepicker.css
line_gauge/common/js/: bootstrap-datetimepicker.js  line_gauge_common.js
line_gauge/data/history/: README.md
line_gauge/data/list/: README.md
line_gauge/data/runtime/: README.md
media_server/: CMakeLists.txt  Makefile  ReadMe.txt  gst_viewer.c  main.c  main_three_monitor.c  media_server.c  media_server.h  sys.h  viewer_soup_server.c
media_server/conf/: config.json
modules/: FindGStreamer.cmake
server/: a.html  board.html  config2.html  index.html  rtcstats.html  signalling-server.py  test.html  websocket.html
server/css/: style.css
server/js/: baidumap.js  config.js  getStats.min.js  rtcstats.js  scripts.js  webrtc.js  websocket.js
utils/: utils.c  utils.h
viewer/: CMakeLists.txt  config.json.hw_cloud  config.json.test  webrtc-gstreamer-sender.c
